# Livestream-Assistant-Agent

./: .gitignore  LICENSE  README.md  docker-compose.agent.yaml  docker-compose.cdc.yaml  docker-compose.dwh.yaml  docker-compose.dwh.yml  docker-compose.kafka-cluster.yaml  docker-compose.kafka-produce.yaml  docker-compose.kafka-single.yaml  docker-compose.redis.yaml  env.example  ingest_data.py  main.py  pyproject.toml  requirements.txt  test.py
data_preparation/: download_file.py  ingest.py  meta_files.py  requirements.txt
data_transformation/: spark_connector.py  spark_read.py
src/agent/: .env.example  Dockerfile  feature_source.py  main.py  requirements.txt  routers.py  start.sh
src/agent/core/: __init__.py  sentiment_extract.py  utils.py
src/cdc_producer/: .env.example  Dockerfile  cdc_produce.py  create_table.py  requirements.txt  run.sh  start.sh
src/cdc_producer/db/: __init__.py  models.py  postgres_client.py
src/etl_pipeline/: __init__.py  ingest.py  ingest_data.py  spark_connector.py  spark_read.py
src/kafka_connect/: Dockerfile
src/notebook/: data_preparation.ipynb  produce_consume.ipynb  sentiment_detection.ipynb
src/notebook/avro_schemas/: comment_events.avsc
src/online_stores/: api.py  feature_source.py  requirements.txt  start.sh
src/producer/: .env.example  Dockerfile  produce.py  requirements.txt
src/producer/avro_schemas/: comment_events.avsc
src/sentiment/: sentiment_extract.py  test.py
src/streaming/: main.py
