[project]
name = "livestream-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "attrs>=25.4.0",
    "boto3>=1.34.0",
    "confluent-kafka==2.12.2",
    "duckdb==1.4.3",
    "fastparquet>=2025.12.0",
    "gdown==5.2.0",
    "huggingface-hub>=0.20.0",
    "ipykernel==7.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg>=3.3.2",
    "pyspark==3.3.1",
    "python-dotenv>=1.0.0",
    "spark-nlp==6.2.3",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.66.0",
]
