[project]
name = "livestream-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "attrs>=25.4.0",
    "boto3>=1.34.0",
    "certifi>=2025.11.12",
    "confluent-kafka==2.12.2",
    "duckdb==1.4.3",
    "fastapi>=0.127.0",
    "fastparquet>=2025.12.0",
    "gdown==5.2.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.20.0",
    "ipykernel==7.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pyspark==3.5.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "spark-nlp==6.2.3",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.66.0",
    "uvicorn>=0.40.0",
]
